# Habit-Tracker-CLI-

./: .gitignore  Cargo.toml  LICENSE.md  README.md
src/: cli.rs  main.rs  model.rs  store.rs  util.rs
src/commands/: add.rs  done.rs  init.rs  list.rs  mod.rs  stats.rs  streak.rs
