[package]
name = "habit-tracker-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4.5.57"
confy = "0.6.1"
directories = "6.0.0"
toml = "0.9.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
chrono = { version = "0.4.41", features = ["serde"] }
chrono-tz = "0.10.4"
anyhow = "1.0.99"
thiserror = "2.0.16"
itertools = "0.14.0"
parking_lot = "0.12.4"
tabled = "0.20.0"
indicatif = "0.18.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
uuid = { version = "1.18.0", features = ["serde", "v4"] }