[package]
name = "habit"
version = "0.1.0"
edition = "2021"
description = "A tiny CLI habit tracker (Rust) with JSON storage."
license = "MIT"
readme = "README.md"

[package.metadata.deb]
maintainer = "Shahin Yahya <shahinyahya99@gmail.com>"
license-file = "LICENSE"
section = "utils"
priority = "optional"
depends = ""
extended-description = "A tiny CLI habit tracker with JSON storage."
assets = [
    ["target/release/habit", "usr/bin/", "755"]
]

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4.5.57"
confy = "0.6.1"
directories = "6.0.0"
toml = "0.9.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
chrono = { version = "0.4.41", features = ["serde"] }
chrono-tz = "0.10.4"
anyhow = "1.0.99"
thiserror = "2.0.16"
itertools = "0.14.0"
parking_lot = "0.12.4"
tabled = "0.20.0"
uuid = { version = "1.18.0", features = ["serde", "v4"] }